Remove default foreground color from form elements to avoid unreadable text rather than supplying a complementary default background color. See discussion on H5BP pull request 1390, https://github.com/h5bp/html5-boilerplate/pull/1390

--- a/css/main.css
+++ b/css/main.css
@@ -11,17 +11,8 @@
    ========================================================================== */
 
 html,
-button,
-input,
-select,
-textarea {
+button {
     color: #222;
-}
-
-input,
-select,
-textarea {
-   background-color: #fff;
 }
 
 body {
